[gd_scene load_steps=4 format=3 uid="uid://dbv4e2t6efdx"]

[ext_resource type="Script" path="res://GraphGrammar/GrammarNodes/Scenes/GrammarNode.gd" id="1"]
[ext_resource type="PackedScene" path="res://GraphGrammar/GrammarNodes/GUIS/NodeSettings.tscn" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 27.5

[node name="GrammarNode" type="RigidBody2D"]
input_pickable = true
continuous_cd = 2
max_contacts_reported = 50
contact_monitor = true
linear_damp = 50.0
script = ExtResource("1")
starting_node_color = Color(0.59, 1, 0.59, 1)
ending_node_color = Color(1, 0.48, 0.48, 1)

[node name="NodeCollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="NumberLabel" type="Label" parent="."]
offset_left = -21.0
offset_top = -23.0
offset_right = 22.0
offset_bottom = -9.0

[node name="NodeSettings" parent="." instance=ExtResource("3")]
visible = false
offset_right = 217.0
offset_bottom = 155.0

[node name="SelectedButton" type="Button" parent="."]
offset_left = -12.0
offset_top = -9.64645
offset_right = 12.0
offset_bottom = 13.3535
toggle_mode = true
action_mode = 0
button_mask = 3
clip_text = true

[connection signal="input_event" from="." to="." method="_on_GrammarNode_input_event"]
[connection signal="toggled" from="SelectedButton" to="." method="_on_SelectedButton_toggled"]
